[gd_scene load_steps=9 format=3 uid="uid://bk4phb6mt57ol"]

[ext_resource type="Script" uid="uid://vi3dd24mrsgt" path="res://scenes/ui/runes/rune_selection_item.gd" id="1_sk65c"]
[ext_resource type="Texture2D" uid="uid://cf4flimdwgrgo" path="res://assets/gui/panels/square_borderless.png" id="2_l8lgd"]
[ext_resource type="Texture2D" uid="uid://dg40s04djnxbs" path="res://assets/gui/panels/v_borderless.png" id="3_l8lgd"]
[ext_resource type="Texture2D" uid="uid://dmua3jnsjlbgr" path="res://assets/gui/buttons/button_rect.png" id="4_mps3j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l8lgd"]
texture = ExtResource("2_l8lgd")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s45ql"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mps3j"]
texture = ExtResource("3_l8lgd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qs8wr"]
texture = ExtResource("4_mps3j")

[node name="RuneSelectionItem" type="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 431.0
script = ExtResource("1_sk65c")

[node name="IconPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l8lgd")

[node name="Icon" type="TextureRect" parent="IconPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_s45ql")
expand_mode = 1
stretch_mode = 4

[node name="TextPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mps3j")

[node name="VBoxContainer" type="VBoxContainer" parent="TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 11.0
offset_right = -10.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="TextPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Description" type="Label" parent="TextPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_qs8wr")
text = "Select"

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
